[UPDATED: hvdo on header]

--- a/public/_layout/css/elements.css
+++ b/public/_layout/css/elements.css
@@ -1473,7 +1473,17 @@
 		object-fit: cover;
 		width: 100vw;
 		height: 100vh;
-		position: fixed;
+		position: absolute;
 		top: 0;
 		left: 0;
 	  }
+	  .viewport-header {
+		position: relative;
+		height: 100vh;
+		text-align: center;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		
+	  }
+	  
