[UPDATED: position style]

--- a/public/_layout/css/elements.css
+++ b/public/_layout/css/elements.css
@@ -930,7 +930,7 @@
 		position: absolute;
 		bottom: 0;
 		border-bottom: 1px solid #fff;
-		width: 300px;
+		width: 200px;
 		content: "";
 	}
 	
@@ -979,7 +979,7 @@
 	@media (max-width: 767px) {
 		
 		
-		.parallax.full-screen .headline h1 { font-size: 45px; }
+		.parallax.full-screen .headline h1 { font-size: 45px;padding: 30px 10px 40px 10px; }
 		
 		.parallax.full-screen .headline:before,
 		.parallax.full-screen .headline:after { width: 15px; }
@@ -992,7 +992,7 @@
 	}
 	
 	@media (max-width: 480px) {
-		
+		.parallax.full-screen .headline h1 { padding: 30px 10px 40px 10px; }
 		.parallax tr { border-top-color: #fff; }
 		
 	}
